report add api for sections
